--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "phpclassic/php-shopify",
+    "name": "erenkucukersoftware/php-shopify",
     "description": "PHP SDK for Shopify API",
     "keywords": ["PHP","Shopify","SDK"],
-    "homepage": "https://github.com/phpclassic/php-shopify",
+    "homepage": "https://github.com/erenkucukersoftware/php-shopify",
     "type": "library",
     "require": {
         "php": ">=5.6",
